<resources>
    <string name="app_name">MediaPlay</string>

    <string name="default_list_name">Default List</string>
    <string name="favorite_list_name">Favorite List</string>
    <string name="history_list_name">History List</string>
    <string name="custom_list_name">Custom Playlists</string>

    <string name="select_all">Select All</string>
    <string name="cancel_select_all">Cancel Select All</string>
    <string name="add_to">Add To</string>
    <string name="delete">Delete</string>
    <string name="add_to_list">Add To Playlist</string>
    <string name="share_list">Share</string>
    <string name="edit_list">Edit List Info</string>
    <string name="delete_list">Delete Music List</string>
    <string name="search_result_title">Search Result</string>
    <string name="create_custom_list">Create Custom List</string>
    <string name="input_custom_list_name">Input List Name</string>
    <string name="delete_custom_list">Delete </string>
    <string name="list"> List? </string>
    <string name="delete_custom_list_tip">This list is currently playing, delete it?</string>
    <string name="create_list_repeat">You cannot duplicate a list that already exists！</string>
    <string name="list_name_limit">The list name exceeds the maximum supported length(</string>
    <string name="delete_music">Whether to delete the selected songs ? </string>
    <string name="delete_music_tip">Selected song is currently playing, delete it?</string>
    <string name="create_success">Create Success!</string>
    <string name="create_failed">Create Failed!</string>
    <string name="add_success">Add Success!</string>
    <string name="add_failed">Add Failed!</string>
    <string name="delete_success">Delete Success!</string>
    <string name="delete_failed">Delete Failed!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change_language_tip">The setting succeeds, The next startup takes effect.</string>
    <string name="singer">singer：</string>
    <string name="all_tools">All Tools</string>
    <string name="shortcut_tools">Shortcut Tools</string>
    <string name="record">Record</string>
    <string name="timing_off">Timing Off</string>
    <string name="change_language">Change Language</string>
    <string name="wooden_fish">Wooden Fish</string>
    <string name="wooden_fish_Merit">Merit+1</string>
    <string name="wooden_fish_count">Your current merit is</string>
    <string name="nav_my">My</string>
    <string name="nav_message">Message</string>
    <string name="nav_timing_off">TimingOff</string>
    <string name="nav_language">Language</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="about_version_tip">The current version number is:</string>
    <string name="follow_system_language">Follow System Language</string>
    <string name="statistics_view_title">Statistics</string>
    <string name="share_statistics_view">Share</string>
    <string name="edit_statistics">Edit</string>
    <string name="edit_statistics_tip">Edit the statistics text</string>
    <string name="save_statistics_capture">Save</string>
    <string name="save_statistics_capture_tip">Save Success!</string>
    <string name="clear_capture_tip">(Delete all Capture files from the MediaPlay/Capture directory)</string>
    <string name="clear_log_tip">(If the log switch is enabled, the current log file will not be deleted)</string>
    <string name="log_switch_tip">(Keep it enabled for engineers to troubleshoot errors)</string>
    <string name="lock_screen_switch_tip">(Make sure the lock screen permission is enabled, click here to access the permission page)</string>

    <string name="favorite_music">The song you play the most is %1$s , It was played %2$d times.</string>
    <string name="favorite_artist">Your favorite singer is %1$s ,You played a total of %2$d songs by this artist.</string>
    <string name="favorite_artist_and_music">Of all the songs by %1$s , you like %2$s best, It was played %3$d times. </string>


    <string name="immersive_meditation">You have spent %1$2.2f hours in musical meditation, your ears have the power of meditation, continue to find peace in the sea of music </string>
    <string name="time_traveler">Congratulations! You have just completed a time trip, you have spent %1$2.2f hours in a time tunnel, and the notes of each era have left your footprints </string>
    <string name="music_marathon">You have completed a %1$2.2f hour music marathon, your music marathon results are impressive, continue to maintain good musical health </string>
    <string name="dream_explorer">Every play is a musical adventure, you have explored the musical dream for %1$2.2f hours, stay curious, discover more musical wonders </string>
    <string name="musical_genius">You\'ve spent %1$2.2f hours in a music class, you know the notes and melodies like the back of your hand, musical genius！ </string>
    <string name="default_statistics_text1">You listened to a total of %1$s seconds of music, which is about the same amount of time as listening to %2$d pieces of music</string>
    <string name="default_statistics_text2">You listened to a total of %1$s seconds of music, which is about the same amount of time as %2$s %3$s times</string>

    <string name="music_text" translatable="false"> music </string>
    <string name="music_artist" translatable="false"> artist </string>
    <string name="music_time" translatable="false"> 00:00 </string>

    <string-array name="tools_item_title">
        <item>Record</item>
        <item>Timing Off</item>
        <item>Change Language</item>
        <item>Wooden Fish</item>
        <item>My</item>
        <item>Settings</item>
    </string-array>

    <string-array name="language_name_item">
        <item>English</item>
        <item>简体中文</item>
        <item>日本語</item>
        <item>Français</item>
        <item>Русский</item>
    </string-array>

    <string-array name="language_item">
        <item>en</item>
        <item>zh</item>
        <item>ja</item>
        <item>fr</item>
        <item>ru</item>
    </string-array>

    <string-array name="county_item">
        <item>US</item>
        <item>CN</item>
        <item>JP</item>
        <item>FR</item>
        <item>RU</item>
    </string-array>

    <string-array name="timing_off_title_item">
        <item>关闭</item>
        <item>10min</item>
        <item>20min</item>
        <item>30min</item>
        <item>60min</item>
        <item>custom</item>
    </string-array>

    <string-array name="statistics_title_item">
        <item> Immersive meditation </item>
        <item> Time Traveler </item>
        <item> Music marathon </item>
        <item> Dream Explorer </item>
        <item> Musical genius </item>
        <item> Custom </item>
    </string-array>

</resources>