<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:text="@string/edit_statistics_tip"
        android:textSize="@dimen/sp_20"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_statistics_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"/>

    <LinearLayout
        android:id="@+id/ll_statistics_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_statistics_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="statistics text"
            android:textAllCaps="false"/>
        <EditText
            android:id="@+id/et_statistics_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="time(min)"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_statistics_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btn_statistics_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
    </LinearLayout>

</LinearLayout>