<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_380"
    android:layout_height="match_parent"
    android:background="@drawable/share_capture_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:layout_height="0dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_statistics_view"
            android:textSize="@dimen/sp_20"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="11"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/iv_capture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_capture"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/save_statistics_capture"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn_share_capture"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/share_statistics_view" />

        <Button
            android:id="@+id/btn_cancel_capture"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"/>

    </LinearLayout>


</LinearLayout>